# SillyMUD

./: .gitignore  .travis.yml  CONTRIBUTING.md  INSTALL  Makefile.am  README.md  configure.ac
.github/workflows/: ci.yml
ci/: check-dist.sh  install-dependencies.sh
lib/: .gitignore  Makefile.am  actions  motd  tinyworld.mob  tinyworld.wld
lib/scripts/: Banker  Dog  Drunk  Makefile.am  Mime  RobMin  ZepGuy
lib/security/: Fiona  Makefile.am  Mystic  README  Sunsor  Xenakis  sample
src/: .gitignore  Heap.c  Makefile  Makefile.am  Opinion.c  Sound.c  Trap.c  act.comm.c  act.comm.h  act.info.c  act.info.h  act.move.c  act.move.h  act.obj1.c  act.obj1.h  act.obj2.c  act.obj2.h  act.off.c  act.off.h  act.other.c  act.other.h  act.social.c  act.social.h  act.wizard.c  act.wizard.h  area.h  bart.c  board.c  board.h  bsd.c  comm.c  comm.h  constants.c  convert.c  create.c  create.h  db.c  db.h  debug.h  die.c  (+80 more)
