SUBDIRS = . security
sillydatadir = $(localstatedir)/sillymud
sillydata_DATA = 25102.messages 3093.messages 3094.messages 3095.messages \
  3096.messages 3097.messages 3098.messages 3099.messages Scripts.dat \
  actions bugs credits help help_table ideas info killfile login messages \
  mortal.board motd news players poses rhyodin skexie.board tinyworld.mob \
  tinyworld.shp tinyworld.wld tinyworld.zon typos util wiz.board wizlist \
  wizmotd tinyworld.obj
